<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/valueone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_firstnumber"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/valuetwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_secondnumber"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <RadioGroup
        android:id="@+id/operationGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/addition" />

        <RadioButton
            android:id="@+id/radioSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction" />

        <RadioButton
            android:id="@+id/radioMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplication" />

        <RadioButton
            android:id="@+id/radioDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculatee"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="297dp"
        app:srcCompat="@drawable/mt"
        tools:ignore="ContentDescription" />
</LinearLayout>